[package]
name = "computation_expression_macro"
version = "0.1.0"
authors = ["Jakub Bandola <xxxkubikx@gmail.com>"]
description = "Proof of concept that F#'s computation expressions can be done in Rust (Procedural macros)"
keywords = ["F#", "proc_macro", "procmacro", "proof of concept"]
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = { version="1.0", features=["span-locations"] }
syn = { version="1.0", features=["full", "parsing", "extra-traits"] }
